@@ -18,6 +18,8 @@ package org.apache.commons.lang.math;
 
 import java.io.Serializable;
 
+import org.apache.commons.lang.text.StrBuilder;
+
 /**
  * <p><code>DoubleRange</code> represents an inclusive range of <code>double</code>s.</p>
  *
@@ -402,7 +404,7 @@ public final class DoubleRange extends Range implements Serializable {
      */
     public String toString() {
         if (toString == null) {
-            StringBuffer buf = new StringBuffer(32);
+            StrBuilder buf = new StrBuilder(32);
             buf.append("Range[");
             buf.append(min);
             buf.append(',');
